tests/machine/x/st/pure_fold.st
| triple |
triple := [:x | ^(x * 3). ].
Transcript show: (triple value: (1 + 2)) printString; cr.
